--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "accelerate==1.10.1",
     "authlib==1.6.5",
+    "markdown-pdf>=1.10",
     "numpy==2.3.3",
     "openai==2.3.0",
     "openai-whisper==20250625",
